@@ -25,3 +25,4 @@
 8. add v2/receipt/create api
 9. add v2/order delete api
 10. add v2/order put api
+11. add v2/order/abnormal api
